--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,9 +41,8 @@ jobs:
       # Build and push Docker image with Buildx.
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
-        id: build-and-push
         uses: docker/build-push-action@v4
         with:
           context: ${{ github.event.inputs.variant }}
           push: true
-          tags: ${{ github.event.inputs.variant }}
+          tags: ghcr.io//${{ github.repository}}:${{ github.event.inputs.variant }}
