--- a/rust-1.69.0-alsa/Dockerfile
+++ b/rust-1.69.0-alsa/Dockerfile
@@ -1,5 +1,5 @@
 FROM rust:1.69.0-slim
 
 RUN apt-get update \
-    && apt-get install --no-install-recommends -y libasound2-dev \
+    && apt-get install --no-install-recommends -y libasound2-dev pkg-config \
     && rm -rf /var/lib/apt/lists/*
