Add Rust 1.80.0 with ALSA support

--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -10,6 +10,7 @@ on:
         options:
           - rust-1.69.0-alsa
           - rust-1.73.0-alsa
+          - rust-1.80.0-alsa
 
 env:
   # github.repository as <account>/<repo>
