--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -11,6 +11,7 @@ on:
           - rust-1.69.0-alsa
           - rust-1.73.0-alsa
           - rust-1.80.0-alsa
+          - rust-1.81.0-alsa
 
 env:
   # github.repository as <account>/<repo>
