--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -15,6 +15,7 @@ on:
           - rust-1.85.0-alsa
           - rust-1.86.0-alsa
           - rust-1.88.0-alsa
+          - rust-1.89.0-alsa
 
 run-name: Build and publish Docker image for variant ${{ inputs.variant }}
 
